# TheProtocols.py

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
src/TheProtocols/: ID.py  Objects.py  Reminders.py  Token.py  __init__.py  __main__.py  session.py  theprotocols.py
src/TheProtocols/objects/: calendar.py  chat.py  home.py  mail.py  network.py  notes.py  photos.py  reminders.py  storage.py  token.py  user.py
